--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<script src="js/demo1.js"></script>
+	<div></div>
+	<script src="js/demo2.js"></script>
 </body>
 </html>
