--- a/framework/require/index.html
+++ b/framework/require/index.html
@@ -3,12 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<div>ss</div>
+	<div></div>
 
 </head>
 <body>
 	
 
 	<script data-main="js/app.js" src="js/require-2.1.11.js"></script>
+<!-- 
+	<script src="js/lib/Underscore.js"></script>
+
+	<script>
+		console.dir(_)
+	</script> -->
+	
 </body>
 </html>
