--- a/css/demo.html
+++ b/css/demo.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>css 常用样式</title>
+	<link rel="stylesheet" href="styleReset.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<h1>1.三角型</h1>
+	<i class="triangle"></i>
+
 </body>
 </html>
