--- a/css/demo.html
+++ b/css/demo.html
@@ -9,6 +9,18 @@
 <body>
 	<h1>1.三角型</h1>
 	<i class="triangle"></i>
-
+	<h1>2.垂直居中</h1>
+	<div class="search">
+					<span class="vertical-align-span"></span>
+					<span class="form_text">
+						<label for="">名称</label>
+						<input type="text">
+					</span>
+					<span class="form_text">
+						<label for="">类型</label>
+						<input type="text">
+					</span>
+					<button class="query">查询</button>
+				</div>
 </body>
 </html>
