--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 	<script src="js/demo1.js"></script>
+	<script src="js/jsex.js"></script>
+	<script src="js/algorithm.js"></script>
 </body>
 </html>
