--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -3,8 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+	*{ margin:0px; padding:0px; }
+	i{
+		position: relative;
+		display: inline-block;
+		width: 0px;
+		height: 0px;
+		border:6px solid transparent;
+		border-right:6px solid #f00;
+	}
+	</style>
 </head>
 <body>
+
+	<i></i>
 	<script src="js/demo1.js"></script>
 	<script src="js/jsex.js"></script>
 	<script src="js/algorithm.js"></script>
