--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -4,20 +4,23 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
-	*{ margin:0px; padding:0px; }
-	i{
-		position: relative;
-		display: inline-block;
-		width: 0px;
-		height: 0px;
-		border:6px solid transparent;
-		border-right:6px solid #f00;
+	#node{
+		background:orange;
+	}
+	.list .classB{
+		background-color: yellow;
+	}
+	.classA{
+		width:100px;
+		height:100px;
+		color:red !important;
 	}
 	</style>
 </head>
 <body>
-
-	<i></i>
+	<div class="list">
+		<div id="node" class="classB classA" style="clolr:blue"></div>
+	</div>
 	<script src="js/demo1.js"></script>
 	<script src="js/jsex.js"></script>
 	<script src="js/algorithm.js"></script>
