--- a/Questions/问题.html
+++ b/Questions/问题.html
@@ -17,4 +17,17 @@
 三、什么时候用GET,什么时候用POST？
     查询数据用GET 提交数据用POST
 
-   
+四、apply、call、bind 的区别和相同
+		相同：	1、改变函数的this的指向。
+				2、第一个参数都是this要指向的对象。
+				3、都可以利用后续参数传参。
+		不同：  1、apply和call 都是对函数的直接调用，而bind方法返回的仍然是一个函数，因此后面还需要()来进行调用才可以。
+				2、apply的参数是一个数组，call和bind是需要单独一个一个传参的
+
+五、你知道哪些页面优化
+
+
+
+六、页面静态化
+
+	   
