--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -18,11 +18,22 @@
 	</style>
 </head>
 <body>
-	<div class="list">
+	<button>第1个</button>
+	<button>第2个</button>
+	<button>第3个</button>
+	<button>第4个</button>
+	<button>第5个</button>
+	<button>第6个</button>
+	<button>第7个</button>
+	<button>第8个</button>
+	<button>第9个</button>
+	<button>第10个</button>
+	<!-- <div class="list">
 		<div id="node" class="classB classA" style="clolr:blue"></div>
-	</div>
+	</div> -->
 	<script src="js/demo1.js"></script>
 	<script src="js/jsex.js"></script>
 	<script src="js/algorithm.js"></script>
+	<script src="js/fn.js"></script>
 </body>
 </html>
