--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -18,7 +18,7 @@
 	</style>
 </head>
 <body>
-	<button>第1个</button>
+	<!-- <button>第1个</button>
 	<button>第2个</button>
 	<button>第3个</button>
 	<button>第4个</button>
@@ -27,11 +27,26 @@
 	<button>第7个</button>
 	<button>第8个</button>
 	<button>第9个</button>
-	<button>第10个</button>
+	<button>第10个</button> -->
 	<!-- <div class="list">
 		<div id="node" class="classB classA" style="clolr:blue"></div>
 	</div> -->
-	<script src="js/demo1.js"></script>
+	<div id="test">
+		<p>1</p>
+		<p>2</p>
+		<p>3</p>
+		<p>4</p>
+		<p>5</p>
+		<p>6</p>
+		<p>7</p>
+		<p>8</p>
+		<p>9</p>
+		<p>10</p>
+	</div>
+	<script>
+
+	</script>
+	<script src="js/question.js"></script>
 	<script src="js/jsex.js"></script>
 	<script src="js/algorithm.js"></script>
 	<script src="js/fn.js"></script>
