--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -45,6 +45,31 @@
 	</div>
 	<script>
 
+
+	  console.log(a)
+
+	  var a = 1;
+
+	  console.log(a)
+	  console.log(b)
+
+	  function b(){
+	  	console.log("执行函数")
+	  }
+      
+
+
+
+
+      function b(){
+
+      }
+      var a;
+      console.log(a)
+      a = 1;
+      console.log(a)
+      console.log(b)
+
 	</script>
 	<script src="js/question.js"></script>
 	<script src="js/jsex.js"></script>
