--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -46,29 +46,29 @@
 	<script>
 
 
-	  console.log(a)
+	  // console.log(a)
 
-	  var a = 1;
+	  // var a = 1;
 
-	  console.log(a)
-	  console.log(b)
+	  // console.log(a)
+	  // console.log(b)
 
-	  function b(){
-	  	console.log("执行函数")
-	  }
+	  // function b(){
+	  // 	console.log("执行函数")
+	  // }
       
 
 
 
 
-      function b(){
+   //    function b(){
 
-      }
-      var a;
-      console.log(a)
-      a = 1;
-      console.log(a)
-      console.log(b)
+   //    }
+   //    var a;
+   //    console.log(a)
+   //    a = 1;
+   //    console.log(a)
+   //    console.log(b)
 
 	</script>
 	<script src="js/question.js"></script>
