--- a/Questions/html/布局一.html
+++ b/Questions/html/布局一.html
@@ -18,7 +18,7 @@
 		height: 200px;
 		margin-left:200px;
 		background-color: #f0f;
-	}	*/
+	}*/	
 	/*二.利用绝对定位来代替浮动*/
 	/*.nav{
 		position: absolute;
@@ -35,7 +35,7 @@
 	}	*/
 
 	/*三.利用css3中的旧盒子模型*/
-	/*.box{
+/*	.box{
 		display:-webkit-box;
 	}
 	.nav{
@@ -50,7 +50,7 @@
 		background-color: #ff0;
 	}*/
 	/*四.利用css3中的新盒子模型*/
-	.box{
+	/*.box{
 		display: -webkit-flex;
 		display:flex;
 	}
@@ -65,7 +65,7 @@
 		height:200px;
 		background-color: #ff0;
 	}
-	</style>
+*/	</style>
 </head>
 <body>	
 	<div class="box">	
