--- a/netease/pc.html
+++ b/netease/pc.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="Keywords" content="网易明星资料库">
 	<meta name="Description" content="网易明星资料库">
+	<meta name="renderer" content="webkit">
+	<!-- render 指定双核浏览器默认以何种方式渲染页面 -->
+	<meta http-equiv="X-UA-Compatible" ;content="IE=edge, chrome=1">
+	<!-- IE=edge告诉IE使用最新的引擎渲染网页,chrome=1 则可以激活Chrome Frame -->
 	<title>Document</title>
 </head>
 <body>
