--- a/netease/wap.html
+++ b/netease/wap.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=640,user-scalable=no,target-densitydpi= device-dpi" />
+	<!-- <meta name="viewport" content="width=device-width,user-scalable=no,target-densitydpi= device-dpi" /> -->
 	<meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
