--- a/netease/pc.html
+++ b/netease/pc.html
@@ -8,7 +8,7 @@
 	<!-- render 指定双核浏览器默认以何种方式渲染页面 -->
 	<meta http-equiv="X-UA-Compatible" ;content="IE=edge, chrome=1">
 	<!-- IE=edge告诉IE使用最新的引擎渲染网页,chrome=1 则可以激活Chrome Frame -->
-	<title>Document</title>
+	<title></title>
 </head>
 <body>
 	
