--- a/effect/360 度全景旋转/360Panoramic.html
+++ b/effect/360 度全景旋转/360Panoramic.html
@@ -39,6 +39,8 @@ body { position:relative; overflow:hidden; }
 	<div id="screen" class="screen">
 		<img src="img/1.jpg" style="-webkit-transform:rotateY(90deg) translateZ(100px)">
 		<img src="img/2.jpg" style="">
+		<img src="img/3.jpg" style="">
+		<img src="img/4.jpg" style="">
 	</div>
 </div>
 <script>
