--- a/javascript/js-module/demo.html
+++ b/javascript/js-module/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="demo-liuyu2.js"></script>
+	<script src="demo-4.js"></script>
 </head>
 <body>
 	
