--- a/netease/wap.html
+++ b/netease/wap.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<!-- 适用于640窗口 -->
 	<meta name="viewport" content="width=640,user-scalable=no,target-densitydpi= device-dpi" />
+
+	<!-- 这条会不管用，因为设置了比例是1:1 所以浏览器视口不会适配640的 -->
+	<!-- <meta name="viewport" content="width=640,user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" /> -->
+
 	<!-- <meta name="viewport" content="width=device-width,user-scalable=no,target-densitydpi= device-dpi" /> -->
+	
+	<!-- 使用于rem -->
+	<!-- <meta content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport"> -->
+
 	<meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
