--- a/netease/myLib/demo.html
+++ b/netease/myLib/demo.html
@@ -11,7 +11,9 @@
 
 	<script>
 
-		console.log(utils)
+		var url = 'https://www.baidu.com/index.php?tn=58051076_oem_dg&ch=33';
+
+		console.log(utils.GetQueryString(url,'tn'))
 		
 	</script>
 </body>
