--- a/netease/myLib/demo.html
+++ b/netease/myLib/demo.html
@@ -13,7 +13,7 @@
 
 		var url = 'https://www.baidu.com/index.php?tn=58051076_oem_dg&ch=33';
 
-		console.log(utils.GetQueryString(url,'tn'))
+		console.log(utils.GetQueryString(url,'ch'))
 		
 	</script>
 </body>
