--- a/netease/wap.html
+++ b/netease/wap.html
@@ -17,7 +17,10 @@
     <meta name="description" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- 忽略将页面中的数字识别为电话号码 -->
     <meta name="format-detection" content="telephone=no">
+    <!-- 忽略Android平台中对邮箱地址的识别 -->
+    <meta name="format-detection" content="email=no" />
 	<title></title>
 </head>
 <body>
