--- a/effect/shouxie.html
+++ b/effect/shouxie.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <title></title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
 <meta name="apple-touch-fullscreen" content="yes" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-
-
 <style>
 html, body {
 	width:100%;height:100%;
@@ -19,7 +16,7 @@ html, body,div,a,span,img {
 	margin:0;
 }
 canvas {
-display:block;
+	display:block;
 }
 .button{
 	width:100px;
@@ -36,7 +33,6 @@ display:block;
 	border-radius:10px;
 	text-align:center;
 	cursor:pointer;
-
 }
 </style>
 
@@ -46,93 +42,46 @@ display:block;
 <div style="width:100%;height:100%;">
 <canvas id="aaa"></canvas>
 </div>
-<div id="button" class="button">完成</div>
 <script>
 		
 var toElem = document.getElementById("button"),
     toCanvas = document.getElementById('aaa');
 toCanvas.width = document.body.offsetWidth;
 toCanvas.height = document.body.offsetHeight;
+
+
 toCanvas.addEventListener('touchstart', onActDown);
 toCanvas.addEventListener('touchend', onActUp);
 toCanvas.addEventListener('touchmove', onActMove);
 toCanvas.addEventListener('mousedown', onActDown);
 toCanvas.addEventListener('mouseup', onActUp);
 toCanvas.addEventListener('mousemove', onActMove);
-	
-toElem.addEventListener('click', onSubmit)
 
-var go鼠标上一个点 = null;
-function onSubmit() {
-    var imageData = toCanvas.toDataURL("image/a.png");
-    var toImgData =  toCanvas.getContext('2d').getImageData(0, 0, toCanvas.width, toCanvas.height);
-    var b64 = imageData.substring( 22 );
-    
-    
-}
+var upPoint = null;
+
 function onActDown(e) {
+	console.log('点击')
 	var point = e.touches ? e.touches[0] : e;
-	
-	go鼠标上一个点 = {x:point.clientX, y:point.clientY};
-	
+	upPoint = {x:point.clientX, y:point.clientY};
 	toCanvas.getContext('2d').beginPath();
-	toCanvas.getContext('2d').moveTo(go鼠标上一个点.x, go鼠标上一个点.y);
+	toCanvas.getContext('2d').moveTo(upPoint.x, upPoint.y);
 }		
 function onActMove(e) {
-
-	if (null == go鼠标上一个点)
+	console.log('移动')
+	if (null == upPoint)
 		return;
 		
 	var point = e.touches ? e.touches[0] : e;
-	go鼠标上一个点 = {x:point.clientX, y:point.clientY};
-	
-	
-	toCanvas.getContext('2d').lineTo(go鼠标上一个点.x, go鼠标上一个点.y);
+	upPoint = {x:point.clientX, y:point.clientY};
+	toCanvas.getContext('2d').lineTo(upPoint.x, upPoint.y);
 	toCanvas.getContext('2d').stroke();
+	
 }		
 function onActUp(e) {
-	go鼠标上一个点 = null;
+	upPoint = null;
 		
 	toCanvas.getContext('2d').closePath();
-}		
-
-function ajaxFunction( url ){
-    var xmlHttp;
-
-	try{
-	  // Firefox, Opera 8.0+, Safari
-	  xmlHttp = new XMLHttpRequest();    // 实例化对象
-	    }
-    catch( e ){
-     // Internet Explorer
-	     try{
-	      xmlHttp = new ActiveXObject( "Msxml2.XMLHTTP" );
-	     }
-	     catch ( e ){
-		      try
-		      {
-		       xmlHttp = new ActiveXObject( "Microsoft.XMLHTTP" );
-		      }
-		      catch( e )
-		      {
-		       alert("您的浏览器不支持AJAX！");
-		       return false;
-		      }
-	     }
-    }
-
-    xmlHttp.onreadystatechange = function()
-    {
-     if( xmlHttp.readyState == 4  && xmlHttp.status == 200 )
-     {
-      document.getElementByIdx_x_x_x( 'sub' ).value =  xmlHttp.responseText;
-     }
-    }
-    xmlHttp.open( "GET", url, true );
-    xmlHttp.send( null );
-
-   }
-
+}
 
 </script>
 </body>
