--- a/netease/myLib/demo.html
+++ b/netease/myLib/demo.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<script src="utils.js"></script>
+
 	
 </head>
 <body>
-	<script>
-		var a = [1,2,3,4];
-		console.log(utils.shuffle(a))
-	</script>
+	<button id="btn">click</button>
+
+	<script src="newAppInfo.js"></script>
 </body>
 
 </html>
