--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -5,7 +5,10 @@
 	<title>Document</title>
 </head>
 <body>
-	
-	<script src="jsFn.js"></script>
+	<input id="test" type="text">
+	<div id="one"><input type="text"><span></span></div>
+	<div id="second"><input type="text"><span></span></div>
+	<div id="third"><input type="text"><span></span></div>
+	<script src="setTimeout.js"></script>
 </body>
 </html>
