--- a/netease/myLib/demo.html
+++ b/netease/myLib/demo.html
@@ -11,6 +11,12 @@
 	<button id="btn">click</button>
 
 	<script src="newAppInfo.js"></script>
+
+	<script>
+		var url  = 'https://www.baidu.com/index.php?tn=58051076_oem_dg&ch=33';
+		var a = utils.getQueryString(url,'ch')
+		console.log(a)
+	</script>
 </body>
 
 </html>
