--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -9,6 +9,8 @@
 	<div id="one"><input type="text"><span></span></div>
 	<div id="second"><input type="text"><span></span></div>
 	<div id="third"><input type="text"><span></span></div>
+	<div id="myDiv">S</div>
 	<script src="setTimeout.js"></script>
+	<script src="adv-skills.js"></script>
 </body>
 </html>
