--- a/netease/myLib/demo.html
+++ b/netease/myLib/demo.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 	<button id="btn">click</button>
-
+	<script src="NewsAppClient.js"></script>
 	<script src="newAppInfo.js"></script>
+
 
 	<script>
 		var url  = 'https://www.baidu.com/index.php?tn=58051076_oem_dg&ch=33';
