--- a/punchTheClock.html
+++ b/punchTheClock.html
@@ -5,8 +5,18 @@
 	<title>打卡</title>
 </head>
 <body>
+	<!-- 方向 -->
+	<p>基础知识</p>
+	<p>工作知识(交互方向)</p>
+	<p>vue.js 数据方向</p>
+	<p>node.js</p>
+
+	<!-- 时间安排 -->
+
+	
 	<ul>
 		<li>2月3号</li>
+		<li>2月4号</li>
 	</ul>
 </body>
 </html>
