--- a/javascript/demo.html
+++ b/javascript/demo.html
@@ -10,7 +10,40 @@
 	<div id="second"><input type="text"><span></span></div>
 	<div id="third"><input type="text"><span></span></div>
 	<div id="myDiv">S</div>
+	<!--
 	<script src="setTimeout.js"></script>
 	<script src="adv-skills.js"></script>
+	-->
+	<script>
+		// var str="1 plus 2 equal 3";
+		// console.log(str.match(/\d+/g))
+		// var str="Visit Microsoft!";
+		// console.log(str.replace(/Microsoft/, "W3School"));
+		// console.log(str)
+// 		name = '"a", "b"';
+// console.log(name.replace(/"([^"]*)"/g, "'$1'"));   // 
+	// function sumTwoSmallestNumbers(numbers) {  
+ //  		numbers = numbers.sort(function(a, b){return a - b; });
+	//   	return numbers[0] + numbers[1];
+	// }
+	// var a = [19,5,42,2,77];
+
+	// console.log(sumTwoSmallestNumbers( a))
+	// console.log(a)
+// 	var sum = 0;
+// console.log(sum.toFixed(2));
+// function alphabetPosition(text) {
+//   var str =  text.match(/[a-z]+/g).toString();
+//   console.log(text.match(/[a-z]+/g));
+//  str.replace(/[a-z]/g,function(i){
+//    return i.charCodeAt(0)
+//   })
+//   return text;
+// }
+
+// alphabetPosition('&]_m0*ky')
+// console.log('asjkhdjkshd'.splice(0,3))
+	console.log(Array(2).join('ss,'))
+	</script>
 </body>
 </html>
