--- a/punchTheClock.html
+++ b/punchTheClock.html
@@ -10,13 +10,30 @@
 	<p>工作知识(交互方向)</p>
 	<p>vue.js 数据方向</p>
 	<p>node.js</p>
-
 	<!-- 时间安排 -->
-
-	
 	<ul>
 		<li>2月3号</li>
 		<li>2月4号</li>
+		<li>2月5号</li>
+		<li>2月6号</li>
+		<li>2月7号</li>
+		<li>2月8号</li>
 	</ul>
+	<script>
+	function fun(n,o){
+
+		console.log(o);
+
+		return {
+			fun:function(m){
+				return fun(m,n);
+			}
+		};
+	};
+	var a = fun(0); a.fun(1); a.fun(2); a.fun(3);  //undefined 0 0 0
+	var b = fun(0).fun(1).fun(2).fun(3);  //undefined 0 , 1 ,2
+	var c = fun(0).fun(1); c.fun(2); c.fun(3); //undefined 0,1,1
+
+	</script>
 </body>
 </html>
