--- a/netease/wap.html
+++ b/netease/wap.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<!-- <meta name="viewport" content="width=640,user-scalable=no,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>   -->
 	<!-- 适用于640窗口 -->
 	<meta name="viewport" content="width=640,user-scalable=no"/>  
 	<!-- 忽略缩放的话，浏览器会自动匹配合适的缩放数值 -->
