--- a/Questions/javascript/demo1.html
+++ b/Questions/javascript/demo1.html
@@ -43,6 +43,8 @@
 		<p>9</p>
 		<p>10</p>
 	</div>
+	<input type="button" id="xiaoXianBtn"  value="小贤的正常叫声"/>
+	<input type="button" id="xiaoMangBtn"  value="小芒的疯叫声"/>
 	<script>
 
 
@@ -72,8 +74,10 @@
 
 	</script>
 	<script src="js/question.js"></script>
+	<!--
 	<script src="js/jsex.js"></script>
 	<script src="js/algorithm.js"></script>
 	<script src="js/fn.js"></script>
+	-->
 </body>
 </html>
