--- a/javascript/test.html
+++ b/javascript/test.html
@@ -4,10 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
 </head>
-<body>
-	
 
-	<script src="data-structure/list.js"></script>
-	
+	<script src="data-structure/Stack.js"></script>	
 </body>
 </html>
