--- a/css/demo-style.html
+++ b/css/demo-style.html
@@ -5,11 +5,20 @@
 	<title>css 常用样式</title>
 	<link rel="stylesheet" href="styleReset.css">
 	<link rel="stylesheet" href="style.css">
+	<style>
+		a.test:hover{
+			color:#f00;
+		}
+	</style>
 </head>
 <body>
 	<h1>1.三角型</h1>
+	<br>
 	<i class="triangle"></i>
+	<br>
+	<br>
 	<h1>2.垂直居中</h1>
+	<br>
 	<div class="search">
 		<span class="vertical-align-span"></span>
 		<span class="form_text">
@@ -21,7 +30,14 @@
 			<input type="text">
 		</span>
 		<button class="query">查询</button>
-		
+	</div>
+	<br>
+	<h1>3.子元素垂直、水平居中</h1>
+	<br>
+	<div class="box-3">
+		<div class="box-sub second">
+
+		</div>
 	</div>
 </body>
 </html>
