--- a/css/demo-style.html
+++ b/css/demo-style.html
@@ -36,8 +36,10 @@
 	<br>
 	<div class="box-3">
 		<div class="box-sub second">
-
+		
 		</div>
+	</div>
+	<div class="box-4">
 	</div>
 </body>
 </html>
