--- a/javascript/test.html
+++ b/javascript/test.html
@@ -5,6 +5,7 @@
 	<title></title>
 </head>
 
-	<script src="data-structure/Stack.js"></script>	
+	<!--  <script src="data-structure/Stack.js"></script>  -->
+	<script src="question-1.js"></script>
 </body>
 </html>
