--- a/html/横竖屏适配问题/index.html
+++ b/html/横竖屏适配问题/index.html
@@ -32,7 +32,7 @@
 	<script src="js/orienter.min.js"></script>
 	<script src="js/jCanvaScript.1.5.18.min.js"></script>
 </head>
-<body>
+<body landscape ="no">
 	
 	<canvas id="myCanvas">
 		
