--- a/css/css3-animation/css3d/demo1.html
+++ b/css/css3-animation/css3d/demo1.html
@@ -15,7 +15,7 @@
 			width:300px;
 			height:300px;
 			background-color: #000;
-			transform-style: preserve-3d;
+			/*transform-style: preserve-3d;*/
 		}
 		.box1{
 			width:100px;
