视频自动播放

--- a/javascript/patterns/pubsub/demo.html
+++ b/javascript/patterns/pubsub/demo.html
@@ -13,7 +13,7 @@
 		
 	</div>
 
-	<script src="../../require-2.1.11.js"></script>
+    <script src="../require-2.1.11.js"></script>
 	<script>
 
 		require(['pubsub'],function(pubsub){
